   changed during `configure` with adding a define to COBC_CPPFLAGS;
   to either use the old format, adding add `-DLISTING_TIMESTAMP_ANSI`,
   or to use an explicit format (cut at 26 characters, may raise false-positives
   in listing tests) e.g. date only `-DLISTING_TIMESTAMP_FORMAT="%Y-%m-%d"`

** new compile options to adjust the listing, see above

* More notable changes

** in 64-bit environments, the maximum field size was increased from
   268435456 bytes (999999998 bytes for OCCURS UNBOUNDED) to 2 GB

** numeric DISPLAY can store and may contain a positive zero after arithmetic,
   PACKED-DECIMAL may contain negative zero (x'0D') after arithmetic; as before
   numeric comparisions to ZERO / 0 / +0 / -0 will all be identical

** quotes around filenames and parts that are resolved by environment variables
   are internally ignored

** in case of any runtime features being used that are not available an error
   is generated during compile (may be reduced to a warning by -Wunsupported
   or be suppressed by -Wno-unsupported) and if the feature is actually used
   at runtime a related exception status is set

** the call-stack show on error and/or in the dump file now contains all
   parameters given to the program via command line options, if any;
   if full debugging information is available it includes all PERFORMs executed

** the dump that is created on abort for all programs that were compiled with
   -fdump can be explicit disabled by setting COB_DUMP_FILE=NONE; it is
   automatically disabled if the process ends upon signals SIGINT/SIGTERM and
   now also disabled upon SIGHUP/SIGPIPE

** additional or instead of the internal COBOL dump a coredump file may be
   created on runtime errors and when configured in the system also after
   the signal handler; see the new runtime option COB_CORE_ON_ERROR for
   details (the default is a best match to the old behavior)

** source references shown in diagnostic messages and for trace at runtime